--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>
-        Health Tracker
-    </title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <title>Health Tracker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,15 +17,15 @@
         <div class="inputs">
             <div>
                 <label for="name">Name</label>
-                <input id="name" type="text">
+                <input id="name" type="text" required>
             </div>
             <div>
                 <label for="age">Age</label>
-                <input id="age" type="number">
+                <input id="age" type="number" required>
             </div>
             <div>
                 <label for="gender">Gender</label>
-                <select id="gender">
+                <select id="gender" required>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
                     <option value="Other">Other</option>
@@ -35,29 +35,29 @@
 
             <div>
                 <label for="distance">Distance Traveled (in km)</label>
-                <input id="distance" type="number">
+                <input id="distance" type="number" required>
             </div>
 
             <div>
                 <label for="exercise">Exercise Duration (in min)</label>
-                <input id="exercise" type="number">
+                <input id="exercise" type="number" required>
             </div>
 
             <div>
                 <label for="water">Water Intake (in ml)</label>
-                <input id="water" type="number">
+                <input id="water" type="number" required>
             </div>
             <div>
                 <label for="bedtime">Bedtime</label>
-                <input id="bedtime" type="time">
+                <input id="bedtime" type="time" required>
             </div>
             <div>
                 <label for="wakeTime">Wake-Up Time</label>
-                <input id="wakeTime" type="time">
+                <input id="wakeTime" type="time" required>
             </div>
             <div>
                 <label for="mood">Mood</label>
-                <select id="mood">
+                <select id="mood" required>
                     <option value="Happy">Happy</option>
                     <option value="Stressed">Stressed</option>
                     <option value="Anxious">Anxious</option>
@@ -66,15 +66,15 @@
             </div>
             <div>
                 <label for="heartRate">Resting Heart Rate (in bpm)</label>
-                <input id="heartRate" type="number">
+                <input id="heartRate" type="number" required>
             </div>
             <div>
                 <label for="bloodPressure">Blood Pressure (in mmHg)</label>
-                <input id="bloodPressure" type="text" placeholder="blood Pressure">
+                <input id="bloodPressure" type="text" placeholder="blood Pressure" required>
             </div>
             <div>
                 <label for="bloodSugar">Blood Sugar Level (in mg/dL)</label>
-                <input id="bloodSugar" type="number">
+                <input id="bloodSugar" type="number" required>
             </div>
         </div>
         <button id="submit">Submit</button>
@@ -83,9 +83,12 @@
 
     </div>
 
-    <div class="container">
+    <div class="container" id="res">
         <form class="form">
-            <button>-</button>
+            <div class="top">
+                <div id="savePDF">Save</div>
+                <button class="can">x</button>
+            </div>
             <h3 id="h2">Your Results</h3>
             <div class="data">
 
@@ -107,7 +110,9 @@
         <div class="save">
             <p>Name:</p>
         </div>
+
         <script src="script.js"></script>
+        
 </body>
 
 </html>
